# polysaccharide-function-benchmark

./: .gitignore  README.md  paper_poly_core_v1.tex  paper_review_selfcheck.md  paper_review_selfcheck_round3.md  paper_review_selfcheck_round4.md  pyproject.toml  references_poly_core_v1.bib  supplement_benchmark_statistics.md  supplement_case_studies.md  supplement_per_label_analysis.md  supplement_reproducibility_poly_core_v1.md  supplement_stronger_simple_baselines.md  多糖机器学习研究可执行计划.md  多糖论文实验执行清单.md  多糖论文结果整理与主表.md  多糖论文草稿_poly_core_v1.md  多糖论文规划_pipeline_and_outline.md  多糖论文规划_story_experiments_checklists.md  多糖（Polysaccharides）数据资源、知识图谱、近五年研究进展与机器学习机会深度研究报告.md  论文图表与caption草案.md
configs/: README.md  function_hierarchy_v1.json  function_hierarchy_v2_fine.json  function_hierarchy_v3_parent_child.json  kg_schema_v0.yaml
docs/: code_structure_review.md  data_card_v0.md  dolphin_fetch_and_run.md  dolphin_kg_design.md  dolphin_kg_research_ideation.md  experiment_comparison.md  kg_function_prediction_findings.md  kg_function_prediction_table.md  next_action.md  ontology_best_variant.md  paper_and_submission_map.md  publishable_evaluation_protocol_v1.md  real_data_ingestion.md  repository_file_guide.md  schema_v0.md  split_protocol.md  stage1_attempt2_notes.md  stage1_exit_criteria.md  stage1_real_data_rerun.md
experiments/: README.md  hetero_gnn_baseline_random.json  hetero_gnn_baseline_random_tuned.json  hetero_gnn_baseline_random_with_disease_tuned.json  hybrid_hetero_gnn_baseline_random.json  hybrid_hetero_gnn_baseline_random_full_disease.json  hybrid_hetero_gnn_baseline_random_with_disease.json  meta_path_baseline_random.json  meta_path_baseline_random_with_disease.json  pipeline_tracker.md  poly_function_link_prediction_clean.json  poly_function_link_prediction_clean_filtered_stratified.json  poly_function_link_prediction_clean_hierarchy_support_v1.json  poly_function_link_prediction_clean_hierarchy_support_v2.json  poly_function_link_prediction_clean_k10.json  poly_function_link_prediction_clean_k100.json  poly_function_link_prediction_clean_k25.json  (+74 more)
paper/: captions_v1.md  (+15 more)
(+528 files in other folders)
