[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polysaccharidesdb"
version = "0.1.0"
description = "Polysaccharide benchmark and evidence-aware experiment pipeline"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
