[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polysaccharidesdb"
version = "0.1.0"
description = "Natural polysaccharide function-prediction benchmark and experiment pipeline"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
ml = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]
figures = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]
graph = [
    "numpy>=1.24",
    "torch>=2.0",
    "torch-geometric>=2.4",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]
all = [
    "beautifulsoup4>=4.12",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "torch-geometric>=2.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
