[project]
name = "polysaccharidesgraph"
version = "0.1.0"
description = "DoLPHiN-derived polysaccharide knowledge graph and benchmark utilities"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
    "torch>=2.0",
    "torch-geometric>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
